[CRJVM205] refactoring code